# ReactorSimulatorGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  Todo.md  main.cpp  readme.md  vcpkg.json
Classes/: Util.h
Classes/Management/: CanvasManager.cpp  CanvasManager.h  GameManager.cpp  GameManager.h
Classes/Reactor/: Coolant.cpp  Coolant.h  ICoolant.h  IReactor.h  ITurbine.h  Reactor.cpp  Reactor.h  ReactorManager.cpp  ReactorManager.h  Turbine.cpp  Turbine.h
Classes/SimIO/: InputBus.cpp  InputBus.h  OutputSnapshot.cpp  OutputSnapshot.h
Classes/UI/: Console.cpp  Console.h  DebugOverlay.cpp  DebugOverlay.h  Layout.cpp  Layout.h  Panel.cpp  Panel.h  ReactorConsole.cpp  ReactorConsole.h  Theme.cpp  Theme.h  VirtualScreen.cpp  VirtualScreen.h
Classes/UIElements/: Dial.cpp  Dial.h  Handwheel.cpp  Handwheel.h  Instrument.h  Lever.cpp  Lever.h  Slider.cpp  Slider.h
Reference/: ClassDiagram.mermaid  ReactorSim.md  ReactorSimRaylibProj.xlsx
